Fixed wrapping with astronaut and hello

--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ header {
     padding-bottom: 5rem;
 }
 
-.intro i,
+.astro-hello,
 .intro h1 {
     display: inline-block;
 }
